Add inline editing to options

--- a/extension/options.html
+++ b/extension/options.html
@@ -36,7 +36,7 @@
 
   <h2>Patterns</h2>
   <table id="patternsTable">
-    <thead><tr><th>URL Pattern</th><th>Actions</th></tr></thead>
+    <thead><tr><th>URL Pattern</th><th>Remove</th></tr></thead>
     <tbody></tbody>
   </table>
   <form id="addPatternForm">
