--- a/extension/options.html
+++ b/extension/options.html
@@ -32,11 +32,12 @@
     <h2>Pomodoro</h2>
     <input id="pomodoroMinutes" type="number" min="1" placeholder="Minutes">
     <button id="startPomodoro">Start</button>
+    <span id="pomodoroCountdown"></span>
   </div>
 
   <h2>Patterns</h2>
   <table id="patternsTable">
-    <thead><tr><th>URL Pattern</th><th>Actions</th></tr></thead>
+    <thead><tr><th>URL Pattern</th><th>Remove</th></tr></thead>
     <tbody></tbody>
   </table>
   <form id="addPatternForm">
