Pre-fill Pomodoro timer

--- a/extension/options.html
+++ b/extension/options.html
@@ -30,8 +30,9 @@
     <input id="listEnd" type="time">
     <button id="saveListSettings">Save Settings</button>
     <h2>Pomodoro</h2>
-    <input id="pomodoroMinutes" type="number" min="1" placeholder="Minutes">
+    <input id="pomodoroMinutes" type="number" min="1" value="20">
     <button id="startPomodoro">Start</button>
+    <button id="endPomodoro">End</button>
     <span id="pomodoroCountdown"></span>
   </div>
 
