--- a/extension/options.html
+++ b/extension/options.html
@@ -28,10 +28,19 @@
     <input id="listStart" type="time">
     <label for="listEnd">End time</label>
     <input id="listEnd" type="time">
+    <label>Manual
+      <select id="listManual">
+        <option value="">Auto</option>
+        <option value="block">Block</option>
+        <option value="unblock">Unblock</option>
+      </select>
+    </label>
+    <div>Status: <span id="listStatus"></span></div>
     <button id="saveListSettings">Save Settings</button>
     <h2>Pomodoro</h2>
-    <input id="pomodoroMinutes" type="number" min="1" placeholder="Minutes">
+    <input id="pomodoroMinutes" type="number" min="1" value="20">
     <button id="startPomodoro">Start</button>
+    <button id="endPomodoro">End</button>
     <span id="pomodoroCountdown"></span>
   </div>
 
