Add Pomodoro break intervals

--- a/extension/options.html
+++ b/extension/options.html
@@ -40,7 +40,8 @@
     <div>Status: <span id="listStatus"></span></div>
     <button id="saveListSettings">Save Settings</button>
     <h2>Pomodoro</h2>
-    <input id="pomodoroMinutes" type="number" min="1" value="20">
+    <label>Focus Minutes <input id="pomodoroMinutes" type="number" min="1" value="20"></label>
+    <label>Break Minutes <input id="pomodoroBreak" type="number" min="0" value="5"></label>
 
     <button id="startPomodoro">Start</button>
     <button id="endPomodoro">End</button>
