--- a/extension/popup.html
+++ b/extension/popup.html
@@ -11,8 +11,10 @@
 <body>
   <label for="listSelect">List</label>
   <select id="listSelect"></select>
-  <label for="minutes">Minutes</label>
+  <label for="minutes">Focus Minutes</label>
   <input id="minutes" type="number" min="1" value="20">
+  <label for="break">Break Minutes</label>
+  <input id="break" type="number" min="0" value="5">
   <label for="manual">Manual</label>
   <select id="manual">
     <option value="">Auto</option>
