Add themed stylesheet and update pages

--- a/extension/blocked.html
+++ b/extension/blocked.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>URL Blocked</title>
+  <link rel="stylesheet" href="stonewall-theme.css">
 </head>
 <body>
   <p id="msg"></p>
