--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Stonewall</title>
+  <link rel="stylesheet" href="stonewall-theme.css">
   <style>
-    body { font-family: sans-serif; width: 200px; }
-    button { width: 100%; margin: 4px 0; }
+    body { width: 200px; }
   </style>
 </head>
 <body>
