--- a/extension/options.html
+++ b/extension/options.html
@@ -3,11 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Stonewall Options</title>
-  <style>
-    table { border-collapse: collapse; }
-    td, th { border: 1px solid #ccc; padding: 4px 8px; }
-    input[type="text"], input[type="time"] { width: 100%; }
-  </style>
+  <link rel="stylesheet" href="stonewall-theme.css">
 </head>
 <body>
   <h1>Stonewall Options</h1>
