Add break button and timer

--- a/extension/blocked.html
+++ b/extension/blocked.html
@@ -5,9 +5,11 @@
   <title>URL Blocked</title>
   <link rel="stylesheet" href="stonewall-theme.css">
 </head>
-<body>
+<body class="blocked">
   <p id="msg"></p>
-  <button id="unblock">Unblock</button>
+  <button id="breakBtn">Start Break</button>
+  <div id="progressContainer"><div id="progressBar"></div></div>
+  <div id="breakTimer"></div>
   <script src="blocked.js"></script>
 </body>
 </html>
