--- a/extension/options.html
+++ b/extension/options.html
@@ -14,6 +14,9 @@
     </select>
   </label>
   <label><input id="immediate" type="checkbox"> Immediate Block</label>
+  <label>Default Break (min)
+    <input id="breakDuration" type="number" min="1">
+  </label>
 
   <h2>Patterns</h2>
   <table id="patternsTable">
