--- a/extension/popup.html
+++ b/extension/popup.html
@@ -11,6 +11,15 @@
 <body>
   <div id="state"></div>
   <button id="toggle"></button>
+  <div>
+    <label>Break (min)
+      <input id="popupDuration" type="number" min="1">
+    </label>
+    <button class="popupQuick" data-duration="5">5</button>
+    <button class="popupQuick" data-duration="15">15</button>
+    <button id="popupStart">Start Break</button>
+    <button id="popupStop" style="display:none;">Stop Break</button>
+  </div>
   <a id="openOptions" href="#">Preferences</a>
   <script src="popup.js"></script>
 </body>
