--- a/extension/options.html
+++ b/extension/options.html
@@ -27,7 +27,7 @@
     <button id="optStop" style="display:none;">Stop Break</button>
   </div>
 
-  <h2>Patterns</h2>
+  <h2 id="patternsHeading">Block List</h2>
   <table id="patternsTable">
     <thead><tr><th>URL Pattern</th><th></th></tr></thead>
     <tbody></tbody>
