Add website time tracking

--- a/extension/options.html
+++ b/extension/options.html
@@ -48,6 +48,17 @@
   </table>
   <button id="addSession">Add Session</button>
 
+  <h2>Time Tracking</h2>
+  <table id="usageTable">
+    <thead>
+      <tr>
+        <th>Website</th><th>Total Time</th><th>Last Accessed</th><th></th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+  <canvas id="usageChart" width="400" height="200"></canvas>
+
   <script src="options.js"></script>
 </body>
 </html>
