--- a/extension/options.html
+++ b/extension/options.html
@@ -52,7 +52,11 @@
   <table id="usageTable">
     <thead>
       <tr>
-        <th>Website</th><th>Total Time</th><th>Last Accessed</th><th></th>
+        <th>Website</th>
+        <th id="sortTime" class="sortable">Total Time</th>
+        <th>Last Accessed</th>
+        <th id="sortCount" class="sortable">Access Count</th>
+        <th></th>
       </tr>
     </thead>
     <tbody></tbody>
