refactor: move extension files to repo root

--- a/pages/blocked/blocked.html
+++ b/pages/blocked/blocked.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>URL Blocked</title>
-  <link rel="stylesheet" href="stonewall-theme.css">
+  <link rel="stylesheet" href="../../styles/stonewall-theme.css">
 </head>
 <body class="blocked">
   <p id="msg"></p>
