--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Stonewall Options</title>
-  <link rel="stylesheet" href="stonewall-theme.css">
+  <link rel="stylesheet" href="../../styles/stonewall-theme.css">
 </head>
 <body>
   <h1>Stonewall Options</h1>
