feat: add one-click exception buttons

--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -11,6 +11,8 @@
 <body>
   <div id="state"></div>
   <button id="toggle"></button>
+  <button id="addException">Add to Exception List</button>
+  <div id="exceptionMsg" aria-live="polite"></div>
   <div>
     <label>Break (min)
       <input id="popupDuration" type="number" min="1">
