--- a/pages/blocked/blocked.html
+++ b/pages/blocked/blocked.html
@@ -16,6 +16,8 @@
   </div>
   <button id="breakBtn">Start Break</button>
   <button id="stopBreakBtn" style="display:none;">Stop Break</button>
+  <button id="addExceptionBtn">Add to Exception List</button>
+  <div id="blockedExceptionMsg" aria-live="polite"></div>
   <div id="progressContainer"><div id="progressBar"></div></div>
   <div id="breakTimer"></div>
   <div id="countdownOverlay" style="display:none;">
