Support wildcard exceptions and add default Reddit pattern

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -44,10 +44,10 @@
       <tbody></tbody>
     </table>
     <form id="addExceptionForm">
-      <input id="newException" type="text" placeholder="reddit.com/r/programming" required>
+      <input id="newException" type="text" placeholder="reddit.com/r/*/comments/" required>
       <button type="submit">Add</button>
     </form>
-    <p class="patternHelp">Patterns match a domain and optional path. Example: reddit.com/r/programming</p>
+    <p class="patternHelp">Patterns match a domain and optional path. Use * as a wildcard. Example: reddit.com/r/*/comments/</p>
   </div>
 
   <h2>Focus Sessions</h2>
