Changes to be committed: 	modified:   README.md 	modified:   background/background.js 	modified:   manifest.json 	modified:   pages/blocked/blocked.html 	modified:   pages/blocked/blocked.js 	modified:   pages/options/options.html 	modified:   pages/options/options.js 	modified:   pages/popup/popup.html 	modified:   pages/popup/popup.js 	modified:   styles/stonewall-theme.css

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -54,7 +54,7 @@
   <table id="sessionsTable">
     <thead>
       <tr>
-        <th>Days</th><th>Start</th><th>End</th><th>Break (min)</th><th></th>
+        <th>Days</th><th>Start</th><th>End</th><th>Breaks Allowed</th><th>Break (min)</th><th></th>
       </tr>
     </thead>
     <tbody></tbody>
