--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -22,6 +22,7 @@
     <button id="popupStart">Start Break</button>
     <button id="popupStop" style="display:none;">Stop Break</button>
   </div>
+  <div id="popupBreakMsg" aria-live="polite"></div>
   <a id="openOptions" href="#">Preferences</a>
   <script src="popup.js"></script>
 </body>
