Rename allow-only mode to focus

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -10,7 +10,7 @@
   <label>Mode
     <select id="mode">
       <option value="block">Block</option>
-      <option value="allow">Allow Only</option>
+      <option value="allow">Focus</option>
     </select>
   </label>
 
