Promote mode selector to header and add spacing

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -7,12 +7,14 @@
 </head>
 <body>
   <h1>Stonewall Options</h1>
-  <label>Mode
+  <h2>Mode</h2>
+  <div class="mode-section">
+    <label for="mode">Choose how Stonewall works</label>
     <select id="mode">
       <option value="block">Block</option>
       <option value="allow">Focus</option>
     </select>
-  </label>
+  </div>
 
   <h2 id="patternsHeading">Block List</h2>
   <table id="patternsTable">
