--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -17,7 +17,7 @@
   </div>
 
   <h2 id="patternsHeading">Block List</h2>
-  <form id="addPatternForm">
+  <form id="addPatternForm" class="inline-add">
     <input id="newPattern" type="text" placeholder="https://example.com/path" required>
     <button type="submit">Add</button>
   </form>
@@ -28,7 +28,7 @@
 
   <div id="exceptionsSection" style="display:none;">
     <h2>Block Exceptions</h2>
-    <form id="addExceptionForm">
+    <form id="addExceptionForm" class="inline-add">
       <input id="newException" type="text" placeholder="reddit.com/r/*/comments/" required>
       <button type="submit">Add</button>
     </form>
