Add spacing before session table

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -44,7 +44,7 @@
 
   <h1>Focus Sessions</h1>
   <p class="form-note">Create scheduled focus blocks with daily limits and break settings.</p>
-  <button id="addSession">Add Session</button>
+  <button id="addSession" class="add-session">Add Session</button>
   <table id="sessionsTable">
     <thead>
       <tr>
