Add consistent break delay messaging

--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Stonewall Options</h1>
   <h1>Mode</h1>
-  <p class="form-note">Choose how Stonewall should behave: Block targets your list; Focus only allows the listed sites.</p>
+  <p class="form-note">Choose how Stonewall should behave</p>
   <div class="mode-section">
     <label for="mode">Mode selection</label>
     <select id="mode">
@@ -30,7 +30,6 @@
 
   <div id="exceptionsSection" style="display:none;">
     <h1>Block Exceptions</h1>
-    <p class="form-note">Allow specific URLs or paths inside sites you block.</p>
     <p class="patternHelp">Patterns match a domain and optional path. Use * as a wildcard. Example: reddit.com/r/*/comments/</p>
     <form id="addExceptionForm" class="inline-add">
       <button type="submit">Add</button>
