--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -5,7 +5,9 @@
   <title>Stonewall</title>
   <link rel="stylesheet" href="../../styles/stonewall-theme.css">
   <style>
-    body { width: 200px; }
+    body { width: 240px; }
+    #countdownOverlay { margin-top: 8px; }
+    #delayTimer { font-size: 18px; }
   </style>
 </head>
 <body>
@@ -19,6 +21,14 @@
     </label>
     <button id="popupStart">Start Break</button>
     <button id="popupStop" style="display:none;">Stop Break</button>
+  </div>
+  <div id="countdownOverlay" style="display:none;">
+    <div id="delayMessage" aria-live="polite">Please wait 15 seconds...</div>
+    <div id="delayTimer" aria-live="polite">15 seconds remaining</div>
+    <div class="buttonRow">
+      <button id="cancelDelay">Cancel</button>
+      <button id="continueDelay" disabled>Continue</button>
+    </div>
   </div>
   <div id="popupBreakMsg" aria-live="polite"></div>
   <a id="openOptions" href="#">Preferences</a>
