--- a/pages/options/options.html
+++ b/pages/options/options.html
@@ -5,53 +5,73 @@
   <title>Stonewall Options</title>
   <link rel="stylesheet" href="../../styles/stonewall-theme.css">
 </head>
-<body>
-  <h1>Stonewall Options</h1>
-  <h1>Mode</h1>
-  <p class="form-note">Choose how Stonewall should behave</p>
-  <div class="mode-section">
-    <label for="mode">Mode selection</label>
-    <select id="mode">
-      <option value="block">Block</option>
-      <option value="allow">Focus</option>
-    </select>
-  </div>
+<body class="options-page">
+  <main class="options-shell">
+    <header class="page-header">
+      <h1>Stonewall Preferences</h1>
+      <p>Set your blocking mode, URL lists, and focus sessions in one place.</p>
+    </header>
 
-  <h1 id="patternsHeading">Block List</h1>
-  <p class="form-note">Add a URL pattern to your current list.</p>
-  <form id="addPatternForm" class="inline-add">
-    <button type="submit">Add</button>
-    <input id="newPattern" type="text" placeholder="https://example.com/path" required>
-  </form>
-  <table id="patternsTable">
-    <thead><tr><th>URL Pattern</th><th></th></tr></thead>
-    <tbody></tbody>
-  </table>
+    <section class="settings-card">
+      <h2>Mode</h2>
+      <p class="form-note">Choose how Stonewall should behave.</p>
+      <div class="mode-section">
+        <label for="mode">Blocking mode</label>
+        <select id="mode">
+          <option value="block">Block listed URLs</option>
+          <option value="allow">Allow only listed URLs</option>
+        </select>
+      </div>
+    </section>
 
-  <div id="exceptionsSection" style="display:none;">
-    <h1>Block Exceptions</h1>
-    <p class="patternHelp">Patterns match a domain and optional path. Use * as a wildcard. Example: reddit.com/r/*/comments/</p>
-    <form id="addExceptionForm" class="inline-add">
-      <button type="submit">Add</button>
-      <input id="newException" type="text" placeholder="reddit.com/r/*/comments/" required>
-    </form>
-    <table id="exceptionsTable">
-      <thead><tr><th>URL Pattern</th><th></th></tr></thead>
-      <tbody></tbody>
-    </table>
-  </div>
+    <section class="settings-card">
+      <h2 id="patternsHeading">Block List</h2>
+      <p class="form-note">Add URL patterns to the current mode list.</p>
+      <form id="addPatternForm" class="inline-add">
+        <input id="newPattern" type="text" placeholder="https://example.com/path" required>
+        <button type="submit">Add Pattern</button>
+      </form>
+      <div class="table-wrap">
+        <table id="patternsTable">
+          <thead><tr><th>URL Pattern</th><th>Action</th></tr></thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
 
-  <h1>Focus Sessions</h1>
-  <p class="form-note">Create scheduled focus blocks with daily limits and break settings.</p>
-  <button id="addSession" class="add-session">Add Session</button>
-  <table id="sessionsTable">
-    <thead>
-      <tr>
-        <th>Days</th><th>Start</th><th>End</th><th>Breaks Allowed</th><th>Break (min)</th><th></th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+    <section id="exceptionsSection" class="settings-card" style="display:none;">
+      <h2>Block Exceptions</h2>
+      <p class="form-note">Allow specific paths inside blocked sites. Use <code>*</code> as a wildcard.</p>
+      <form id="addExceptionForm" class="inline-add">
+        <input id="newException" type="text" placeholder="reddit.com/r/*/comments/" required>
+        <button type="submit">Add Exception</button>
+      </form>
+      <div class="table-wrap">
+        <table id="exceptionsTable">
+          <thead><tr><th>URL Pattern</th><th>Action</th></tr></thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
+
+    <section class="settings-card">
+      <div class="card-title-row">
+        <h2>Focus Sessions</h2>
+        <button id="addSession" class="add-session" type="button">Add Session</button>
+      </div>
+      <p class="form-note">Create scheduled focus blocks with daily break limits.</p>
+      <div class="table-wrap">
+        <table id="sessionsTable">
+          <thead>
+            <tr>
+              <th>Days</th><th>Start</th><th>End</th><th>Breaks Allowed</th><th>Break (min)</th><th>Action</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </section>
+  </main>
 
   <script src="options.js"></script>
 </body>
