--- a/pages/popup/popup.html
+++ b/pages/popup/popup.html
@@ -38,6 +38,7 @@
 
     <a id="openOptions" href="#">Open Preferences</a>
   </main>
+  <script src="../../styles/theme.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
