--- a/pages/blocked/blocked.html
+++ b/pages/blocked/blocked.html
@@ -25,6 +25,7 @@
       <button id="continueDelay" disabled>Continue</button>
     </div>
   </div>
+  <script src="../../styles/theme.js"></script>
   <script src="blocked.js"></script>
 </body>
 </html>
